Twenty Twenty One: Fix editor spacing with inner blocks.
Fix margin on inner blocks (e.g. list item blocks) and body line-height in the editor styles for Twenty Twenty One.

Props nidhidhandhukiya, rishabhwp, shailu25, ugyensupport, sabernhardt, karmatosed, sandeepdahiya, mleraygp, sirlouen, skithund, dilip2615.
Fixes #60196, #63549.
Built from https://develop.svn.wordpress.org/trunk@61106


git-svn-id: http://core.svn.wordpress.org/trunk@60442 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwentyone/assets/css/ie-editor.css
+++ b/wp-content/themes/twentytwentyone/assets/css/ie-editor.css
@@ -2331,7 +2331,7 @@ pre.wp-block-verse {
 	color: #28303d;
 }
 
-[data-block] {
+[data-block]:where(:not(.wp-block-list-item)) {
 	margin-top: 30px;
 	margin-bottom: 30px;
 }
@@ -2439,13 +2439,10 @@ pre.wp-block-verse {
 	left: 5px;
 }
 
-html {
-	line-height: 1.7;
-}
-
 html,
 body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	line-height: 1.7;
 }
 
 body {
