--- a/wp-content/themes/twentytwentyone/assets/css/style-editor.css
+++ b/wp-content/themes/twentytwentyone/assets/css/style-editor.css
@@ -2268,7 +2268,7 @@ pre.wp-block-verse {
 	color: var(--global--color-primary);
 }
 
-[data-block] {
+[data-block]:where(:not(.wp-block-list-item)) {
 	margin-top: var(--global--spacing-vertical);
 	margin-bottom: var(--global--spacing-vertical);
 }
@@ -2340,6 +2340,7 @@ body {
 	font-family: var(--global--font-secondary);
 	font-size: var(--global--font-size-base);
 	font-weight: normal;
+	line-height: var(--global--line-height-body);
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
 }
