--- a/wp-content/themes/twentytwentyone/assets/sass/05-blocks/utilities/_editor.scss
+++ b/wp-content/themes/twentytwentyone/assets/sass/05-blocks/utilities/_editor.scss
@@ -70,7 +70,7 @@
 }
 
 // Spacing Overrides
-[data-block] {
+[data-block]:where(:not(.wp-block-list-item)) {
 	margin-top: var(--global--spacing-vertical);
 	margin-bottom: var(--global--spacing-vertical);
 }
